fix 1、MogoMyItem组件的小修改； 2、添加MyLayer弹窗组件；

--- a/src/base.scss
+++ b/src/base.scss
@@ -257,3 +257,9 @@ body{
 
 
 
+.mogofade-enter-active, .mogofade-leave-active {
+	transition: opacity .5s;
+}
+.mogofade-enter, .mogofade-leave-to /* .mogofade-leave-active below version 2.1.8 */ {
+	opacity: 0;
+}
