--- a/src/scss/default.scss
+++ b/src/scss/default.scss
@@ -60,3 +60,8 @@ input[type="date"]{-webkit-appearance:none;}
 
 input-placeholder { color: #b6b6b6; }
 ::-webkit-input-placeholder { color: #b6b6b6; }
+
+select{
+	appearance: none;
+	-webkit-appearance: none;
+}
