--- a/src/scss/mogoinput.scss
+++ b/src/scss/mogoinput.scss
@@ -19,9 +19,20 @@
 	}
 	&-input{
 		@include mogo-flex-item; 
+		position: relative;
 		.mogo-input{
 			@include mogo-flex-item;
 			display: block; font-size: 28px; color: #222;
+			&.absolute{
+				position: absolute; width: 100%; height: 100%; left: 0; top: 0; opacity: 0;
+			}
+		}
+		&-value{
+			display: block; width: 100%; height: 100%;
+			font-size: 28px; color: #222;
+			&.placeholder{
+				color: #999;
+			}
 		}
 	}
 	&.mogo-checkbox{
