--- a/src/scss/mogoinput.scss
+++ b/src/scss/mogoinput.scss
@@ -29,7 +29,7 @@
 			}
 		}
 		&-value{
-			display: block; width: 100%; height: 100%;
+			display: block; width: 100%;
 			font-size: 28px; color: #222;
 			&.placeholder{
 				color: #999;
